# ocaml-ntfy

./: ntfy.opam
lib/: dune  ntfy.ml
